# job_search_bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  prompt.md  pyproject.toml  schema.txt
.github/workflows/: deploy.yaml
archive/: agent.py  app.py  config.py  db.py
src/: agent.py  app.py  db.py  main.py
src/api/v1/: endpoints.py
src/core/: config.py
src/db/: session.py
src/dependencies/: prompt.md  tools.py
src/schemas/: user.py
src/services/: chat_service.py  user_service.py
src/tests/: agent_test.py  sql_test.py
